[gd_scene load_steps=8 format=3 uid="uid://ftv4cfjnu63m"]

[ext_resource type="Script" path="res://towers/redprincesstower.gd" id="1_00yxn"]
[ext_resource type="Texture2D" uid="uid://chhl4mmtap7tj" path="res://assets/princess_tower.png" id="2_rufyk"]
[ext_resource type="Texture2D" uid="uid://bnuhus76eida2" path="res://assets/healthbar1.png" id="3_f0s1r"]
[ext_resource type="Texture2D" uid="uid://dmfrvlxc6wc45" path="res://assets/healthbar2.png" id="4_hd1mi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kvcr2"]
size = Vector2(14.0833, 13.0167)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_44kwm"]
size = Vector2(415, 396)

[sub_resource type="CircleShape2D" id="CircleShape2D_ugkue"]
radius = 1034.44

[node name="RedPrincessTower" type="StaticBody2D" groups=["enemy_tower"]]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_00yxn")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(67, 99)
scale = Vector2(30, 30)
shape = SubResource("RectangleShape2D_kvcr2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(58.5, 92)
shape = SubResource("RectangleShape2D_44kwm")

[node name="AttackRanage" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRanage"]
position = Vector2(60, 98)
shape = SubResource("CircleShape2D_ugkue")

[node name="AttackTimer" type="Timer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(163, -38)
scale = Vector2(15, 15)
texture = ExtResource("2_rufyk")

[node name="HealthBar" type="TextureProgressBar" parent="."]
offset_left = -219.0
offset_top = -337.0
offset_right = 293.0
offset_bottom = -81.0
texture_over = ExtResource("3_f0s1r")
texture_progress = ExtResource("4_hd1mi")

[connection signal="area_entered" from="AttackRanage" to="." method="_on_attack_ranage_area_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
